# fastapi-zero

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: pipeline.yml
fast_zero/: app.py  security.py  settings.py
fast_zero/routers/: auth.py  todo.py  users.py
migrations/: env.py
migrations/versions/: 78a700007869_create_users_table.py  89fe5e3ded6b_create_todos_table.py
tests/: conftest.py  test_app.py  test_auth.py  test_security.py  test_todos.py  test_users.py
